[workspace]
members = ["engine", "."]

[profile.release]
panic = "abort"

[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
engine = { path = "engine" }
dioxus-html-macro = { version = "0.2.0" }
# dioxus-html-macro = { git = "https://github.com/DioxusLabs/dioxus-html-macro", version = "0.1.0" }


[target.'cfg(not(target_arch= "wasm32"))'.dependencies]
clap = { version = "3.2.8", features = ["derive"] }
dioxus = { version = "0.2.4", features = ["desktop", "router", "tui"] }
pretty_env_logger = "0.4.0"

[target.'cfg(target_arch= "wasm32")'.dependencies]
wasm-logger = "0.2.0"
dioxus = { version = "0.2.4", features = ["web", "router"] }

# WASM
