[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
float-ord = "0.3.2"
getrandom = { version = "0.2.7", features = ["js"] }
itertools = "0.10.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"

rayon = "1.5.3"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tap = "1.0.1"
