[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
getrandom = { version = "0.2.7", features = ["js"] }
log = "0.4.17"
lru = "0.10.0"
rand = "0.8.5"

serde = { version = "1.0.138", features = ["derive"] }
smallvec = { version = "1.10.0", features = ["const_generics"] }
tap = "1.0.1"
